# ChangeLog for kde-base/superkaramba
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/superkaramba/ChangeLog,v 1.131 2010/01/22 21:10:49 abcd Exp $

  22 Jan 2010; Jonathan Callen <abcd@gentoo.org> superkaramba-4.3.4.ebuild:
  Keyword ~amd64-linux/~x86-linux

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> superkaramba-4.3.3.ebuild:
  Stable for HPPA too.

  23 Dec 2009; Jonathan Callen <abcd@gentoo.org> superkaramba-4.3.4.ebuild:
  Pull in changes from overlay

  11 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -superkaramba-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  superkaramba-4.3.3.ebuild:
  x86 stable, bug 292455

*superkaramba-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org> +superkaramba-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> superkaramba-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> superkaramba-4.3.3.ebuild:
  Add ~sparc

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  superkaramba-4.3.3.ebuild:
  amd64 stable wrt #292455

  19 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  -files/superkaramba-python-2.6.patch,
  -files/superkaramba-3.5.2-multilib-python.diff,
  -files/superkaramba-3.5.7-network_sensor.patch,
  -superkaramba-3.5.10.ebuild:
  Remove KDE 3.5.10.

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -superkaramba-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -superkaramba-4.2.4.ebuild:
  Drop KDE 4.2.4

*superkaramba-4.3.3 (02 Nov 2009)

  02 Nov 2009; Alex Alexander <wired@gentoo.org> +superkaramba-4.3.3.ebuild:
  Version bump

  18 Oct 2009; Markus Meier <maekke@gentoo.org> superkaramba-4.3.1.ebuild:
  x86 stable, bug #287697

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> -superkaramba-3.5.9.ebuild:
  KDE 3.5.9 removal
