@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/superkaramba
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/superkaramba/ChangeLog,v 1.131 2010/01/22 21:10:49 abcd Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/superkaramba/ChangeLog,v 1.132 2010/01/25 17:41:19 scarabeus Exp $
+
+*superkaramba-4.3.5 (25 Jan 2010)
+
+  25 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  +superkaramba-4.3.5.ebuild:
+  Version bump
 
   22 Jan 2010; Jonathan Callen <abcd@gentoo.org> superkaramba-4.3.4.ebuild:
   Keyword ~amd64-linux/~x86-linux
